--- a/munni.html
+++ b/munni.html
@@ -1,8 +1,11 @@
-<html>
-    <head>
-        <title>birthday</title>
-    </head>
-    <body>
-        <a><img src="content://media/external/images/media/1000279688"height=1800 width=1000 />   
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img src="Munni.jpg" alt="MyLove" height="1800px" width="1000px" 
+</body>
 </html>
