--- a/munni.html
+++ b/munni.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="Munni.jpg" alt="MyLove" height="1800px" width="1000px" 
+    <img src="Munni.jpg" alt="MyLove" height="1800px" width="1000px" >
 </body>
 </html>
